# hsfd-rl-snake

./: Dockerfile  README.md  pyproject.toml
snake/: Agent.py  DQN.py  SnakeGame.py  snake.py
snake/models/: Action.py  Colors.py
