[tool.poetry]
name = "snake"
version = "0.1.0"
description = ""
authors = ["Jonas <mail@jonasgoebel.net>", "Jan Heil", "David Lemming"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
numpy = "^2.1.3"
pygame = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
